# langgraph-finance-roadmap

./: .gitignore  README.md  langgraph_finance_roadmap.md  langgraph_quant_research_factor_mining_complete.md  langgraph_quant_research_factor_mining_complete_v3.md
agent-demos/: README.md
agent-demos/01-agent-is-loop-not-magic/: README.md  agent_loop.py
agent-demos/02-agent-state-and-research-task/: README.md  research_state.py
agent-demos/03-tool-calling-for-market-data/: README.md  market_data_tools.py
agent-demos/04-deterministic-factor-tools/: README.md  factor_tools.py
agent-demos/05-memory-and-research-journal/: README.md  research_journal.py
agent-demos/06-planning-a-factor-study/: README.md  factor_study_plan.py
agent-demos/07-rag-over-research-notes/: README.md  rag_research_notes.py
agent-demos/08-human-review-before-backtest/: README.md  human_review.py
agent-demos/09-single-agent-factor-evaluation/: README.md  single_agent_factor_evaluation.py
agent-demos/10-multi-agent-review-and-red-team/: README.md  multi_agent_review.py
agent-demos/11-agent-experiment-recorder/: README.md  agent_experiment_recorder.py
awesome-llm-apps/: LEARNING_PROJECTS_ZH.md
langgraph-demos/: README.md
level1/: .env.example  pyproject.toml
level1/data/: chat_history.json  sample_financial_report.txt  sample_stock_data.csv
level1/src/mini_cases/: case1_read_csv.py  case2_daily_return.py  case3_moving_average.py  case4_llm_summarize.py  case5_chat_history.py  llm_utils.py
qlib-demos/: README.md  download_to_qlib.py  qlib_demo_common.py  qlib_env.sh
(+125 files in other folders)
